--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                         Mahatab
                     </h1>
                     <span class="footer__subtitle">
-                        Frontend Developer
+                        Power BI Developer
                     </span>
                 </div>
 
@@ -644,7 +644,7 @@
                         <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#contact" class="footer__link">Contact_Me</a>
+                        <a href="#contact" class="footer__link">Contact Me</a>
                     </li>
                 </ul>
 
